--- a/style.css
+++ b/style.css
@@ -1,13 +1,32 @@
 *{margin:0; padding:0;}
+ul{list-style:none;}
 
-/* General styles */
-body {background:#0a0a0a url(images/background.jpg) top center no-repeat; color:#ccc; font:110% 'Economica',Tahoma,sans-serif; line-height:1.3em;}
-a {color:#d06060; font-weight:400;}
-a:hover {text-decoration:underline;}
-p,ul,ol,dl {margin:0 0 15px 0; line-height:1.5em;}
-h1 {color:#888; font-size:3.6em; margin-bottom:0;}
-h1 a {text-transform:none; font-weight:400;}
-h1 a:hover {text-decoration:none; color:#eee;}
-h2 {font-size:2.2em; color:#333; margin:0 0 5px;}
-h3 {font-size:1.6em; margin:0 0 5px 0;}
-h1,h2,h3 {color:#d06060; font-weight:400; line-height:1.2em; font-family:'Economica', sans-serif;}
+a{text-decoration: none;}
+
+body {font-size:200%; background-color: #797979;}
+
+.index:visited{color: #87CEEB}
+.index:hover{color: black}
+.index{padding-left: 12.5%;padding-top: 10px}
+
+.menu {font-size: 1.3em;background-color:#6495ED;
+	width: 75%;margin: 20px auto;overflow: hidden;
+}
+
+.menu li {float: left;width: 25%;}
+
+.menu a {display: block;text-align: center;color: white;}
+
+.menu a:hover{background-color:#0000C6}
+
+.content{width: 75%;margin: 0 auto;}
+
+.home{text-align: justify;width: 90%;
+	margin: 60px auto; font-size: 1.1em}
+
+.Wellcome {font-size: 50px;margin-top: 20px;margin-bottom: 20px;}
+
+.sibcb {display: block;padding-left: 12.5%;padding-top: 80px}
+
+
+
