--- a/style.css
+++ b/style.css
@@ -1,32 +1,45 @@
+/*为主页添加欢迎动画*/
+
 *{margin:0; padding:0;}
 ul{list-style:none;}
 
+/* General styles */
 a{text-decoration: none;}
+body {font-size:20px; background-color: #272727}
 
-body {font-size:200%; background-color: #797979;}
+/*fix height clearfix*/
+.clearfix:after{content: "";display: block;clear: both;}
 
-.index:visited{color: #87CEEB}
-.index:hover{color: black}
-.index{padding-left: 12.5%;padding-top: 10px}
+.index:visited{color: #111}
+.index:hover{color: #000}
+.index{display: block;font-size: 1.3em;margin-left: 12.5%;padding-top:30px;
+	font-family:'Sitka Small'}
 
-.menu {font-size: 1.3em;background-color:#6495ED;
-	width: 75%;margin: 20px auto;overflow: hidden;
-}
+.menu {font-size: 1.3em;background-color:#5B5B5B;
+	width: 75%;margin: 20px auto;}
 
 .menu li {float: left;width: 25%;}
 
 .menu a {display: block;text-align: center;color: white;}
 
-.menu a:hover{background-color:#0000C6}
+.menu,.content a:hover{color: #000;text-decoration:underline}
+.menu,.content a:active{color: #000;text-decoration:underline}
 
-.content{width: 75%;margin: 0 auto;}
+.content{color: white;width: 75%;margin: 0 auto;
+		height: 390px;font-size: 1.2em;
+		font-family:'Sitka Small'}
+.content a{color: #111;font-weight: bold;}
+.content ul:not(.publications){line-height: 4em}
 
-.home{text-align: justify;width: 90%;
-	margin: 60px auto; font-size: 1.1em}
+.Wellcome {font-size: 45px;margin-top: 20px;margin-bottom: 10px;
+			color: white}
 
-.Wellcome {font-size: 50px;margin-top: 20px;margin-bottom: 20px;}
+.home{text-align: justify;width: 90%;font-family:'Sitka Small';line-height: 1.5em;
+	margin: 28px auto; font-size: 1.1em;color:#fff;}
 
-.sibcb {display: block;padding-left: 12.5%;padding-top: 80px}
+.publications{text-align:justify;}
 
+.sibcb {display: block;padding-left: 12.5%;padding-top: 50px}
 
+.author{font-weight:bold}
 
