--- a/style.css
+++ b/style.css
@@ -5,25 +5,29 @@ ul{list-style:none;}
 
 /* General styles */
 a{text-decoration: none;}
-body {font-size:20px; background-color: #272727}
+body {font-size:20px;
+	background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);}
 
 /*fix height clearfix*/
 .clearfix:after{content: "";display: block;clear: both;}
 
-.index:visited{color: #111}
-.index:hover{color: #000}
-.index{display: block;font-size: 1.3em;margin-left: 12.5%;padding-top:30px;
-	font-family:'Sitka Small'}
+.master{width: 75%;height: 100%;margin: 0 12.5%}
 
-.menu {font-size: 1.3em;background-color:#3C3C3C;width: 75%;margin: 20px auto;}
-.menu li {float: left;width: 24.82%;border-right: 2px solid #272727}
-.menu a {display: block;width:100%;text-align: center;color: white;border-bottom: 3px solid #272727}
-.menu li a:hover,.menu li a.current{border-color:#161616;background-color: #5B5B5B;}
+.index:hover{color: #33CCCC}
+.index{display: block;width: 23.5%;font-size: 1.3;font-family:'Sitka Small';margin:20px 0;}
+/*.index:visited{color: #33FFFF}
+.index:active{color: #33FFFF}*/
 
-.content a:hover{color: #000;text-decoration:underline}
-..content a:active{color: #000;text-decoration:underline}
+.menu {font-size: 1.3em;margin: 20px auto;}
+.menu li {float: left;width: 24.82%;border-right: 2px solid #fff}
+.menu a {display: block;width:100%;text-align: center;
+	color: white;border-bottom: 3px solid skyblue;
+background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);}
+.menu li a:hover,.menu li a.current{background-image: radial-gradient(circle 248px at center, #FF95CA 0%, #FF0080 100%);
+border-color:#FF8040}
 
-.content{color: white;width: 75%;margin: 0 auto;
+.content a:hover,.content a:active{color: #000;text-decoration:underline}
+.content{color: white;
 		height: 390px;font-size: 1.2em;
 		font-family:'Sitka Small'}
 .content a{color: #111;font-weight: bold;}
@@ -37,6 +41,9 @@ body {font-size:20px; background-color: #272727}
 
 .publications{text-align:justify;}
 
-.sibcb {display: block;padding-left: 12.5%;padding-top: 50px}
+.sibcb img{display: block;width: 100%;height: 
+	125px;margin-top: 60px;
+}
 
 .author{font-weight:bold}
+
