--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ ul{list-style:none;}
 /* General styles */
 a{text-decoration: none;}
 body {font-size:20px;
-	background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);}
+	background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
+height:1000px;}
 
 /*fix height clearfix*/
 .clearfix:after{content: "";display: block;clear: both;}
