--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ height:1000px;}
 .menu a {display: block;width:100%;text-align: center;
 	color: white;border-bottom: 3px solid skyblue;
 background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);}
-.menu li a:hover,.menu li a.current{background-image: radial-gradient(circle 248px at center, #FF95CA 0%, #FF0080 100%);
+.menu li a:hover,
+.menu li a.current{background-image: radial-gradient(circle 248px at center, #FF95CA 0%, #FF0080 100%);
 border-color:#FF8040}
 
 .content a:hover,.content a:active{color: #000;text-decoration:underline}
@@ -43,8 +44,8 @@ border-color:#FF8040}
 .publications{text-align:justify;}
 
 .sibcb img{display: block;width: 100%;height: 
-	125px;margin-top: 60px;
-}
+	125px;}
+.sibcb{margin-top: 60px;}
 
 .author{font-weight:bold}
 
