--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ border-color:#FF8040}
 
 .sibcb img{display: block;width: 100%;height: 
 	125px;}
-.sibcb{margin-top: 60px;}
+.sibcb{padding-top: 60px;}
 
 .author{font-weight:bold}
 
