--- a/style.css
+++ b/style.css
@@ -5,46 +5,43 @@ ul{list-style:none;}
 
 /* General styles */
 a{text-decoration: none;}
-body {font-size:20px;
-	background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
-height:1000px;}
+body {font-size:125%;
+	background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);}
 
 /*fix height clearfix*/
 .clearfix:after{content: "";display: block;clear: both;}
 
-.master{width: 75%;height: 100%;margin: 0 12.5%}
+.master{margin:0 auto;width: 1200px;height: 750px;}
 
-.index:hover{color: #33CCCC}
-.index{display: block;width:100%;font-size: 1.3;font-family:'Sitka Small';margin:20px 0;}
-.index:visited{color: #33FFFF}
-.index:active{color: #33FFFF}
+.index{color: #FF69B4;display: block;width: 295px;font-size: 1.1em;font-family:'Sitka Small';margin:12px 0;}
+/*.index a:visited{color: #2894FF}*/
+.index a:visited{color: #FF69B4}
+.index a:hover{color: #33CCCC}
 
-.menu {font-size: 1.3em;margin: 20px auto;}
-.menu li {float: left;width: 24.82%}
+.menu {font-size: 1.3em;margin: 5px 0;}
+.menu li {float: left;width: 25%;}
 .menu a {display: block;width:100%;text-align: center;
-	color: white;border-bottom: 3px solid skyblue;
+	color: white;border-bottom: 3px solid #46A3FF;
 background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);}
-.menu li a:hover,
-.menu li a.current{background-image: radial-gradient(circle 248px at center, #FF95CA 0%, #FF0080 100%);
+.menu li a:hover,.menu li a.current{background-image: radial-gradient(circle 248px at center, #FF95CA 0%, #FF0080 100%);
 border-color:#FF8040}
 
-.content a:hover,.content a:active{color: #000;text-decoration:underline}
-.content{color: white;
-		height: 390px;font-size: 1.2em;
-		font-family:'Sitka Small'}
-.content a{color: #111;font-weight: bold;}
+.content a:hover,.content a:active{color: #FF8C00;text-decoration:underline}
+.content{color: white;height: 55%;font-size: 1.2em;
+		font-family:'Sitka Small';
+		}	
+.content a{color: #FF8C00;font-weight: bold;}
 .content ul:not(.publications){line-height: 4em}
 
 .Wellcome {font-size: 45px;margin-top: 20px;margin-bottom: 10px;
-			color: white}
+			color: white;}
 
-.home{text-align: justify;width: 90%;font-family:'Sitka Small';line-height: 1.5em;
-	margin: 28px auto; font-size: 1.1em;color:#fff;}
+.home{text-align: justify;width: 85%;font-family:'Sitka Small';line-height: 1.5em;
+	margin: auto; font-size: 1.12em;}
 
 .publications{text-align:justify;}
 
-.sibcb img{display: block;width: 100%;height: 125px;}
-.sibcb a{padding-top: 60px;}
+.sibcb img{margin: 20px 0; width: 100%;}
 
 .author{font-weight:bold}
 
