--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@ ul{list-style:none;}
 
 /* General styles */
 a{text-decoration: none;}
-body {font-size:20px; background-image: linear-gradient(#212121, #787878);display: block;margin: auto auto;
-	width:1260px;}
+body {background-image: linear-gradient(#212121, #787878)}
+
+.master {font-size:20px;display: block;margin: auto auto;width:1260px;height: 100%;}
 
 /*fix height clearfix*/
 .clearfix:after{content: "";display: block;clear: both;}
 
 .index:visited{color: white}
 .index:hover{color: #A4A4A4}
-.index{display: block;font-size: 1.3em;margin-right: 72%;padding-top:33px;
+.index{display: block;font-size: 1.3em;margin-left: 5%;margin-right: 67%;padding-top:33px;
 	font-family:'Sitka Small'; color: white}
 
 .menu {font-size: 1.3em;background-color:#3C3C3C;margin: 20px auto;}
