--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {background-image: linear-gradient(#212121, #787878)}
 
 .index:visited{color: white}
 .index:hover{color: #A4A4A4}
-.index{display: block;font-size: 1.3em;margin-left: 5%;margin-right: 67%;padding-top:33px;
+.index{display: block;font-size: 1.3em;padding-left: 5%;margin-right: 67%;padding-top:33px;
 	font-family:'Sitka Small'; color: white}
 
 .menu {font-size: 1.3em;background-color:#3C3C3C;margin: 20px auto;}
